fix workclub hero alignment

--- a/src/pages/Widgets/Banner/style.module.css
+++ b/src/pages/Widgets/Banner/style.module.css
@@ -26,6 +26,7 @@
 .banner_logo img {
   width: 480px;
   height: auto;
+  margin: auto;
 }
 
 .center {
